--- a/archives/zhihu-search/2023-11-10.md
+++ b/archives/zhihu-search/2023-11-10.md
@@ -1,10 +1,10 @@
 # 2023-11-10
 
-共 55 条
+共 56 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Fri Nov 10 2023 20:08:32 GMT+0800 (China Standard Time) -->
-1. [原神天理到底被骗什么了](https://www.zhihu.com/search?q=原神天理到底被骗什么了)
+<!-- 最后更新时间 Fri Nov 10 2023 21:07:14 GMT+0800 (China Standard Time) -->
+1. [性能和价格双在线的数码好物](https://www.zhihu.com/search?q=性能和价格双在线的数码好物)
 1. [KTV 衰退的趋势肉眼可见](https://www.zhihu.com/search?q=KTV 衰退的趋势肉眼可见)
 1. [理想汽车连续四个季度盈利](https://www.zhihu.com/search?q=理想汽车连续四个季度盈利)
 1. [万元洗烘套装推荐](https://www.zhihu.com/search?q=万元洗烘套装推荐)
@@ -14,6 +14,7 @@
 1. [星穹铁道藿藿](https://www.zhihu.com/search?q=星穹铁道藿藿)
 1. [深夜吃一碗街边炒泡面](https://www.zhihu.com/search?q=深夜吃一碗街边炒泡面)
 1. [美香一家抵达卧龙神树坪基地](https://www.zhihu.com/search?q=美香一家抵达卧龙神树坪基地)
+1. [原神天理到底被骗什么了](https://www.zhihu.com/search?q=原神天理到底被骗什么了)
 1. [环游风道是怎样扩大冷暖范围的](https://www.zhihu.com/search?q=环游风道是怎样扩大冷暖范围的)
 1. [纸嫁衣6无间梦境](https://www.zhihu.com/search?q=纸嫁衣6无间梦境)
 1. [秋冬抗老护肤好物](https://www.zhihu.com/search?q=秋冬抗老护肤好物)
