--- a/archives/toutiao-search/2023-11-11.md
+++ b/archives/toutiao-search/2023-11-11.md
@@ -1,70 +1,83 @@
 # 2023-11-11
 
-共 104 条
+共 115 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 11 2023 08:23:59 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Nov 11 2023 09:39:34 GMT+0800 (China Standard Time) -->
 1. [习近平将赴美国举行中美元首会晤](https://so.toutiao.com/search?keyword=习近平将赴美国举行中美元首会晤)
 1. [中美元首会晤将沟通哪些重大问题](https://so.toutiao.com/search?keyword=中美元首会晤将沟通哪些重大问题)
 1. [用“新精彩”擦亮乌镇峰会金字招牌](https://so.toutiao.com/search?keyword=用“新精彩”擦亮乌镇峰会金字招牌)
-1. [山东舰首次远洋后没回家休整说明啥](https://so.toutiao.com/search?keyword=山东舰首次远洋后没回家休整说明啥)
+1. [苏州毒地案双方回应为何大相径庭](https://so.toutiao.com/search?keyword=苏州毒地案双方回应为何大相径庭)
 1. [中信银行原行长孙德顺贪9.79亿获死缓](https://so.toutiao.com/search?keyword=中信银行原行长孙德顺贪9.79亿获死缓)
 1. [何立峰访美并与美财长会谈](https://so.toutiao.com/search?keyword=何立峰访美并与美财长会谈)
-1. [以色列总理：目标是战胜哈马斯](https://so.toutiao.com/search?keyword=以色列总理：目标是战胜哈马斯)
-1. [印度和巴基斯坦再次交火](https://so.toutiao.com/search?keyword=印度和巴基斯坦再次交火)
+1. [山东舰首次远洋后没回家休整说明啥](https://so.toutiao.com/search?keyword=山东舰首次远洋后没回家休整说明啥)
 1. [儿媳遭公公殴打 知情人：矛盾已解决](https://so.toutiao.com/search?keyword=儿媳遭公公殴打+知情人：矛盾已解决)
-1. [全球资管巨头先锋领航确认退出中国](https://so.toutiao.com/search?keyword=全球资管巨头先锋领航确认退出中国)
+1. [西安初雪打雷闪电](https://so.toutiao.com/search?keyword=西安初雪打雷闪电)
+1. [国务院任免国家工作人员](https://so.toutiao.com/search?keyword=国务院任免国家工作人员)
 1. [23省44城自来水检出致癌物？假的](https://so.toutiao.com/search?keyword=23省44城自来水检出致癌物？假的)
 1. [男足女足男排男篮都不去巴黎奥运会](https://so.toutiao.com/search?keyword=男足女足男排男篮都不去巴黎奥运会)
 1. [女子称遭工商联副会长强奸 检方回应](https://so.toutiao.com/search?keyword=女子称遭工商联副会长强奸+检方回应)
-1. [中国女子在日本遇害案监控曝光](https://so.toutiao.com/search?keyword=中国女子在日本遇害案监控曝光)
-1. [国务院任免国家工作人员](https://so.toutiao.com/search?keyword=国务院任免国家工作人员)
-1. [两车刮蹭致大堵车 “公路判官”出手](https://so.toutiao.com/search?keyword=两车刮蹭致大堵车+“公路判官”出手)
-1. [阿维塔12上市 售30.08万元起](https://so.toutiao.com/search?keyword=阿维塔12上市+售30.08万元起)
 1. [6岁男孩抓起2米长蛇回家当皮鞭甩](https://so.toutiao.com/search?keyword=6岁男孩抓起2米长蛇回家当皮鞭甩)
-1. [孩子考完试把书卖了 爸妈赶紧找回](https://so.toutiao.com/search?keyword=孩子考完试把书卖了+爸妈赶紧找回)
-1. [佛山一医院疑贩卖出生证 产科已停诊](https://so.toutiao.com/search?keyword=佛山一医院疑贩卖出生证+产科已停诊)
+1. [当地回应3万多棵国槐树被强砍](https://so.toutiao.com/search?keyword=当地回应3万多棵国槐树被强砍)
+1. [直击北方多地迎来第一场雪](https://so.toutiao.com/search?keyword=直击北方多地迎来第一场雪)
+1. [女子半夜洗澡被邻居敲门称扰民](https://so.toutiao.com/search?keyword=女子半夜洗澡被邻居敲门称扰民)
+1. [阿维塔12上市 售30.08万元起](https://so.toutiao.com/search?keyword=阿维塔12上市+售30.08万元起)
+1. [为何顾家家居40年的家业说卖就卖](https://so.toutiao.com/search?keyword=为何顾家家居40年的家业说卖就卖)
+1. [缅北战火旁中国边境小镇瑞丽的平静](https://so.toutiao.com/search?keyword=缅北战火旁中国边境小镇瑞丽的平静)
 1. [哈马斯和以色列的战斗处于什么状态](https://so.toutiao.com/search?keyword=哈马斯和以色列的战斗处于什么状态)
-1. [体育馆坍塌事故11人被采取强制措施](https://so.toutiao.com/search?keyword=体育馆坍塌事故11人被采取强制措施)
 1. [阿巴斯：已准备好承担在加沙的责任](https://so.toutiao.com/search?keyword=阿巴斯：已准备好承担在加沙的责任)
+1. [体育馆坍塌事故11人被采取强制措施](https://so.toutiao.com/search?keyword=体育馆坍塌事故11人被采取强制措施)
 1. [巴方质问：杀多少巴勒斯坦人才停战](https://so.toutiao.com/search?keyword=巴方质问：杀多少巴勒斯坦人才停战)
-1. [90后老板招女主播要求体重140斤以上](https://so.toutiao.com/search?keyword=90后老板招女主播要求体重140斤以上)
-1. [韩国男子被机器人误当蔬菜压死](https://so.toutiao.com/search?keyword=韩国男子被机器人误当蔬菜压死)
-1. [哈马斯领导人抵达埃及](https://so.toutiao.com/search?keyword=哈马斯领导人抵达埃及)
-1. [南昌一女子聚餐后死亡 同桌3人被判](https://so.toutiao.com/search?keyword=南昌一女子聚餐后死亡+同桌3人被判)
-1. [黔东南芦笙会小朋友被饰品压弯了腰](https://so.toutiao.com/search?keyword=黔东南芦笙会小朋友被饰品压弯了腰)
+1. [曝加沙一难民营5万人共用4个卫生间](https://so.toutiao.com/search?keyword=曝加沙一难民营5万人共用4个卫生间)
+1. [佛山一医院疑贩卖出生证 产科已停诊](https://so.toutiao.com/search?keyword=佛山一医院疑贩卖出生证+产科已停诊)
+1. [本轮冲突已致以色列约1200人死亡](https://so.toutiao.com/search?keyword=本轮冲突已致以色列约1200人死亡)
+1. [狗子偷吃半盘生水饺 小弟帮忙盯梢](https://so.toutiao.com/search?keyword=狗子偷吃半盘生水饺+小弟帮忙盯梢)
 1. [歼-20实弹射击近照首次曝光](https://so.toutiao.com/search?keyword=歼-20实弹射击近照首次曝光)
+1. [哈马斯领导人抵达埃及](https://so.toutiao.com/search?keyword=哈马斯领导人抵达埃及)
 1. [博主解读江苏淮安205国道收费](https://so.toutiao.com/search?keyword=博主解读江苏淮安205国道收费)
-1. [巴方：以军逮捕66名巴勒斯坦人](https://so.toutiao.com/search?keyword=巴方：以军逮捕66名巴勒斯坦人)
+1. [刘銮雄：恒大投资都是自己决定的](https://so.toutiao.com/search?keyword=刘銮雄：恒大投资都是自己决定的)
+1. [英伟达为中国市场定制三款AI芯片](https://so.toutiao.com/search?keyword=英伟达为中国市场定制三款AI芯片)
+1. [韩国男子被机器人误当蔬菜压死](https://so.toutiao.com/search?keyword=韩国男子被机器人误当蔬菜压死)
+1. [工人躺袋装果酱上 官方：责令停产](https://so.toutiao.com/search?keyword=工人躺袋装果酱上+官方：责令停产)
+1. [大V：没必要把孟羽童跳槽关联品德](https://so.toutiao.com/search?keyword=大V：没必要把孟羽童跳槽关联品德)
+1. [消防回应女生为约会爬窗户踩空坠楼](https://so.toutiao.com/search?keyword=消防回应女生为约会爬窗户踩空坠楼)
 1. [国务院督查组已进驻四省份](https://so.toutiao.com/search?keyword=国务院督查组已进驻四省份)
+1. [黔东南芦笙会小朋友被饰品压弯了腰](https://so.toutiao.com/search?keyword=黔东南芦笙会小朋友被饰品压弯了腰)
+1. [钟南山：近期或有新冠感染小高峰](https://so.toutiao.com/search?keyword=钟南山：近期或有新冠感染小高峰)
+1. [何超琼现身酒吧清唱《偏偏喜欢你》](https://so.toutiao.com/search?keyword=何超琼现身酒吧清唱《偏偏喜欢你》)
+1. [女孩期中考完试直接卖书](https://so.toutiao.com/search?keyword=女孩期中考完试直接卖书)
+1. [夫妇高速吵架 妻子多次冲向行车道](https://so.toutiao.com/search?keyword=夫妇高速吵架+妻子多次冲向行车道)
+1. [小女孩凌晨走丢获包子铺夫妇救助](https://so.toutiao.com/search?keyword=小女孩凌晨走丢获包子铺夫妇救助)
+1. [加沙地带已有21家医院关闭](https://so.toutiao.com/search?keyword=加沙地带已有21家医院关闭)
+1. [媒体：应拆除韦世豪这枚炸弹的引信](https://so.toutiao.com/search?keyword=媒体：应拆除韦世豪这枚炸弹的引信)
+1. [警方怀疑权志龙全身脱毛用意](https://so.toutiao.com/search?keyword=警方怀疑权志龙全身脱毛用意)
+1. [中国女子在日本遇害案监控曝光](https://so.toutiao.com/search?keyword=中国女子在日本遇害案监控曝光)
+1. [老人喝多辱骂外卖小哥被怼](https://so.toutiao.com/search?keyword=老人喝多辱骂外卖小哥被怼)
+1. [“双11”反套路指南请收好](https://so.toutiao.com/search?keyword=“双11”反套路指南请收好)
+1. [以色列总理：目标是战胜哈马斯](https://so.toutiao.com/search?keyword=以色列总理：目标是战胜哈马斯)
+1. [印度和巴基斯坦再次交火](https://so.toutiao.com/search?keyword=印度和巴基斯坦再次交火)
+1. [全球资管巨头先锋领航确认退出中国](https://so.toutiao.com/search?keyword=全球资管巨头先锋领航确认退出中国)
+1. [两车刮蹭致大堵车 “公路判官”出手](https://so.toutiao.com/search?keyword=两车刮蹭致大堵车+“公路判官”出手)
+1. [孩子考完试把书卖了 爸妈赶紧找回](https://so.toutiao.com/search?keyword=孩子考完试把书卖了+爸妈赶紧找回)
+1. [90后老板招女主播要求体重140斤以上](https://so.toutiao.com/search?keyword=90后老板招女主播要求体重140斤以上)
+1. [南昌一女子聚餐后死亡 同桌3人被判](https://so.toutiao.com/search?keyword=南昌一女子聚餐后死亡+同桌3人被判)
+1. [巴方：以军逮捕66名巴勒斯坦人](https://so.toutiao.com/search?keyword=巴方：以军逮捕66名巴勒斯坦人)
 1. [小鹏和华为的AEB论战告一段落](https://so.toutiao.com/search?keyword=小鹏和华为的AEB论战告一段落)
 1. [高校女生占座还打砸驱赶同学](https://so.toutiao.com/search?keyword=高校女生占座还打砸驱赶同学)
-1. [刘銮雄：恒大投资都是自己决定的](https://so.toutiao.com/search?keyword=刘銮雄：恒大投资都是自己决定的)
-1. [女孩期中考完试直接卖书](https://so.toutiao.com/search?keyword=女孩期中考完试直接卖书)
 1. [哈马斯称一被俘以士兵死于以军空袭](https://so.toutiao.com/search?keyword=哈马斯称一被俘以士兵死于以军空袭)
-1. [钟南山：近期或有新冠感染小高峰](https://so.toutiao.com/search?keyword=钟南山：近期或有新冠感染小高峰)
-1. [大V：没必要把孟羽童跳槽关联品德](https://so.toutiao.com/search?keyword=大V：没必要把孟羽童跳槽关联品德)
-1. [警方怀疑权志龙全身脱毛用意](https://so.toutiao.com/search?keyword=警方怀疑权志龙全身脱毛用意)
-1. [老人喝多辱骂外卖小哥被怼](https://so.toutiao.com/search?keyword=老人喝多辱骂外卖小哥被怼)
-1. [缅北战火旁中国边境小镇瑞丽的平静](https://so.toutiao.com/search?keyword=缅北战火旁中国边境小镇瑞丽的平静)
 1. [粮食局长收巨额现金退休后锒铛入狱](https://so.toutiao.com/search?keyword=粮食局长收巨额现金退休后锒铛入狱)
 1. [毒地土壤中的有毒物质有何危害](https://so.toutiao.com/search?keyword=毒地土壤中的有毒物质有何危害)
 1. [加沙医院里的早产儿面临生死考验](https://so.toutiao.com/search?keyword=加沙医院里的早产儿面临生死考验)
 1. [广东两家中华老字号被商务部除名](https://so.toutiao.com/search?keyword=广东两家中华老字号被商务部除名)
 1. [好友痛哭吊唁佳木斯体育馆遇难者](https://so.toutiao.com/search?keyword=好友痛哭吊唁佳木斯体育馆遇难者)
-1. [工人躺袋装果酱上 官方：责令停产](https://so.toutiao.com/search?keyword=工人躺袋装果酱上+官方：责令停产)
 1. [工行美国子公司遭勒索软件攻击](https://so.toutiao.com/search?keyword=工行美国子公司遭勒索软件攻击)
 1. [房产专家谈毒地事件给购房人启示](https://so.toutiao.com/search?keyword=房产专家谈毒地事件给购房人启示)
 1. [工商联副会长强奸女子 时隔1年未批捕](https://so.toutiao.com/search?keyword=工商联副会长强奸女子+时隔1年未批捕)
 1. [网曝公公殴打哺乳期儿媳](https://so.toutiao.com/search?keyword=网曝公公殴打哺乳期儿媳)
-1. [当地回应3万多棵国槐树被强砍](https://so.toutiao.com/search?keyword=当地回应3万多棵国槐树被强砍)
-1. [狗子偷吃半盘生水饺 小弟帮忙盯梢](https://so.toutiao.com/search?keyword=狗子偷吃半盘生水饺+小弟帮忙盯梢)
-1. [曝加沙一难民营5万人共用4个卫生间](https://so.toutiao.com/search?keyword=曝加沙一难民营5万人共用4个卫生间)
 1. [知名滑雪女教练在滑雪场不幸身亡](https://so.toutiao.com/search?keyword=知名滑雪女教练在滑雪场不幸身亡)
 1. [台媒：台民众最气缺蛋与进口蛋争议](https://so.toutiao.com/search?keyword=台媒：台民众最气缺蛋与进口蛋争议)
 1. [第一视角看俄无人机摧毁多个乌目标](https://so.toutiao.com/search?keyword=第一视角看俄无人机摧毁多个乌目标)
 1. [男子进账1132万直冲派出所](https://so.toutiao.com/search?keyword=男子进账1132万直冲派出所)
-1. [为何顾家家居40年的家业说卖就卖](https://so.toutiao.com/search?keyword=为何顾家家居40年的家业说卖就卖)
 1. [美联储主席：宣布结束加息为时过早](https://so.toutiao.com/search?keyword=美联储主席：宣布结束加息为时过早)
 1. [苗族舞蹈：情感无法言语都在舞蹈中](https://so.toutiao.com/search?keyword=苗族舞蹈：情感无法言语都在舞蹈中)
 1. [血脂管理谋求创新达标方案](https://so.toutiao.com/search?keyword=血脂管理谋求创新达标方案)
@@ -73,12 +86,10 @@
 1. [媒体评小学食堂吃出鼠头](https://so.toutiao.com/search?keyword=媒体评小学食堂吃出鼠头)
 1. [10月CPI转负PPI降幅扩大](https://so.toutiao.com/search?keyword=10月CPI转负PPI降幅扩大)
 1. [伊朗外长与卡塔尔外交大臣通话](https://so.toutiao.com/search?keyword=伊朗外长与卡塔尔外交大臣通话)
-1. [夫妇高速吵架 妻子多次冲向行车道](https://so.toutiao.com/search?keyword=夫妇高速吵架+妻子多次冲向行车道)
 1. [中纪委公布4名内鬼被查被处分](https://so.toutiao.com/search?keyword=中纪委公布4名内鬼被查被处分)
 1. [俄称已准备好组织俄亚阿三国外长会](https://so.toutiao.com/search?keyword=俄称已准备好组织俄亚阿三国外长会)
 1. [伊朗总统莱希将于11日前往沙特](https://so.toutiao.com/search?keyword=伊朗总统莱希将于11日前往沙特)
 1. [周鸿祎谈被“00后”拦住当场投简历](https://so.toutiao.com/search?keyword=周鸿祎谈被“00后”拦住当场投简历)
-1. [“双11”反套路指南请收好](https://so.toutiao.com/search?keyword=“双11”反套路指南请收好)
 1. [两男子冒充北京军区军委人员被抓](https://so.toutiao.com/search?keyword=两男子冒充北京军区军委人员被抓)
 1. [男子离婚后起诉女方退还12万彩礼](https://so.toutiao.com/search?keyword=男子离婚后起诉女方退还12万彩礼)
 1. [中国海警回应菲律宾非法侵闯仁爱礁](https://so.toutiao.com/search?keyword=中国海警回应菲律宾非法侵闯仁爱礁)
