--- a/archives/toutiao-search/2023-11-11.md
+++ b/archives/toutiao-search/2023-11-11.md
@@ -1,63 +1,79 @@
 # 2023-11-11
 
-共 115 条
+共 127 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 11 2023 09:39:34 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Nov 11 2023 10:44:50 GMT+0800 (China Standard Time) -->
 1. [习近平将赴美国举行中美元首会晤](https://so.toutiao.com/search?keyword=习近平将赴美国举行中美元首会晤)
 1. [中美元首会晤将沟通哪些重大问题](https://so.toutiao.com/search?keyword=中美元首会晤将沟通哪些重大问题)
 1. [用“新精彩”擦亮乌镇峰会金字招牌](https://so.toutiao.com/search?keyword=用“新精彩”擦亮乌镇峰会金字招牌)
-1. [苏州毒地案双方回应为何大相径庭](https://so.toutiao.com/search?keyword=苏州毒地案双方回应为何大相径庭)
-1. [中信银行原行长孙德顺贪9.79亿获死缓](https://so.toutiao.com/search?keyword=中信银行原行长孙德顺贪9.79亿获死缓)
+1. [数读苏州“毒地案”](https://so.toutiao.com/search?keyword=数读苏州“毒地案”)
+1. [两车刮蹭致大堵车 “公路判官”出手](https://so.toutiao.com/search?keyword=两车刮蹭致大堵车+“公路判官”出手)
 1. [何立峰访美并与美财长会谈](https://so.toutiao.com/search?keyword=何立峰访美并与美财长会谈)
-1. [山东舰首次远洋后没回家休整说明啥](https://so.toutiao.com/search?keyword=山东舰首次远洋后没回家休整说明啥)
-1. [儿媳遭公公殴打 知情人：矛盾已解决](https://so.toutiao.com/search?keyword=儿媳遭公公殴打+知情人：矛盾已解决)
-1. [西安初雪打雷闪电](https://so.toutiao.com/search?keyword=西安初雪打雷闪电)
+1. [市民驾车与野猪相撞被交警判负全责](https://so.toutiao.com/search?keyword=市民驾车与野猪相撞被交警判负全责)
 1. [国务院任免国家工作人员](https://so.toutiao.com/search?keyword=国务院任免国家工作人员)
+1. [济南15岁少年被清华录取](https://so.toutiao.com/search?keyword=济南15岁少年被清华录取)
+1. [6岁男孩抓起2米长蛇回家当皮鞭甩](https://so.toutiao.com/search?keyword=6岁男孩抓起2米长蛇回家当皮鞭甩)
 1. [23省44城自来水检出致癌物？假的](https://so.toutiao.com/search?keyword=23省44城自来水检出致癌物？假的)
 1. [男足女足男排男篮都不去巴黎奥运会](https://so.toutiao.com/search?keyword=男足女足男排男篮都不去巴黎奥运会)
-1. [女子称遭工商联副会长强奸 检方回应](https://so.toutiao.com/search?keyword=女子称遭工商联副会长强奸+检方回应)
-1. [6岁男孩抓起2米长蛇回家当皮鞭甩](https://so.toutiao.com/search?keyword=6岁男孩抓起2米长蛇回家当皮鞭甩)
-1. [当地回应3万多棵国槐树被强砍](https://so.toutiao.com/search?keyword=当地回应3万多棵国槐树被强砍)
-1. [直击北方多地迎来第一场雪](https://so.toutiao.com/search?keyword=直击北方多地迎来第一场雪)
-1. [女子半夜洗澡被邻居敲门称扰民](https://so.toutiao.com/search?keyword=女子半夜洗澡被邻居敲门称扰民)
 1. [阿维塔12上市 售30.08万元起](https://so.toutiao.com/search?keyword=阿维塔12上市+售30.08万元起)
+1. [女子称遭工商联副会长强奸 检方回应](https://so.toutiao.com/search?keyword=女子称遭工商联副会长强奸+检方回应)
+1. [山东舰首次远洋后没回家休整说明啥](https://so.toutiao.com/search?keyword=山东舰首次远洋后没回家休整说明啥)
+1. [歼-20实弹射击近照首次曝光](https://so.toutiao.com/search?keyword=歼-20实弹射击近照首次曝光)
+1. [俄警官说中文一口东北碴子味](https://so.toutiao.com/search?keyword=俄警官说中文一口东北碴子味)
+1. [刘銮雄：恒大投资都是自己决定的](https://so.toutiao.com/search?keyword=刘銮雄：恒大投资都是自己决定的)
+1. [冬雷把睡梦中的西安人吓醒了](https://so.toutiao.com/search?keyword=冬雷把睡梦中的西安人吓醒了)
+1. [南京胖哥回应父亲患癌：不需要捐款](https://so.toutiao.com/search?keyword=南京胖哥回应父亲患癌：不需要捐款)
+1. [哈马斯和以色列的战斗处于什么状态](https://so.toutiao.com/search?keyword=哈马斯和以色列的战斗处于什么状态)
+1. [体育馆坍塌事故11人被采取强制措施](https://so.toutiao.com/search?keyword=体育馆坍塌事故11人被采取强制措施)
+1. [阿巴斯：已准备好承担在加沙的责任](https://so.toutiao.com/search?keyword=阿巴斯：已准备好承担在加沙的责任)
+1. [巴方质问：杀多少巴勒斯坦人才停战](https://so.toutiao.com/search?keyword=巴方质问：杀多少巴勒斯坦人才停战)
+1. [毒地土壤中的有毒物质有何危害](https://so.toutiao.com/search?keyword=毒地土壤中的有毒物质有何危害)
+1. [曝加沙一难民营5万人共用4个卫生间](https://so.toutiao.com/search?keyword=曝加沙一难民营5万人共用4个卫生间)
+1. [哈马斯领导人抵达埃及](https://so.toutiao.com/search?keyword=哈马斯领导人抵达埃及)
+1. [钟南山：近期或有新冠感染小高峰](https://so.toutiao.com/search?keyword=钟南山：近期或有新冠感染小高峰)
+1. [狗子偷吃半盘生水饺 小弟帮忙盯梢](https://so.toutiao.com/search?keyword=狗子偷吃半盘生水饺+小弟帮忙盯梢)
+1. [黎真主党继续在临时边界与以军交火](https://so.toutiao.com/search?keyword=黎真主党继续在临时边界与以军交火)
+1. [当地回应3万多棵国槐树被强砍](https://so.toutiao.com/search?keyword=当地回应3万多棵国槐树被强砍)
+1. [夫妇高速吵架 妻子多次冲向行车道](https://so.toutiao.com/search?keyword=夫妇高速吵架+妻子多次冲向行车道)
+1. [女子半夜洗澡被邻居敲门称扰民](https://so.toutiao.com/search?keyword=女子半夜洗澡被邻居敲门称扰民)
+1. [英伟达为中国市场定制三款AI芯片](https://so.toutiao.com/search?keyword=英伟达为中国市场定制三款AI芯片)
+1. [佛山一医院疑贩卖出生证 产科已停诊](https://so.toutiao.com/search?keyword=佛山一医院疑贩卖出生证+产科已停诊)
+1. [博主解读江苏淮安205国道收费](https://so.toutiao.com/search?keyword=博主解读江苏淮安205国道收费)
+1. [八一飞行表演队赴中东参展有何看点](https://so.toutiao.com/search?keyword=八一飞行表演队赴中东参展有何看点)
+1. [黔东南芦笙会小朋友被饰品压弯了腰](https://so.toutiao.com/search?keyword=黔东南芦笙会小朋友被饰品压弯了腰)
+1. [警方怀疑权志龙全身脱毛用意](https://so.toutiao.com/search?keyword=警方怀疑权志龙全身脱毛用意)
+1. [传佛山一企业11月9日开始春节放假](https://so.toutiao.com/search?keyword=传佛山一企业11月9日开始春节放假)
+1. [大V：没必要把孟羽童跳槽关联品德](https://so.toutiao.com/search?keyword=大V：没必要把孟羽童跳槽关联品德)
+1. [又到一年一度北方人看南方人玩雪](https://so.toutiao.com/search?keyword=又到一年一度北方人看南方人玩雪)
+1. [国务院督查组已进驻四省份](https://so.toutiao.com/search?keyword=国务院督查组已进驻四省份)
+1. [工人躺袋装果酱上 官方：责令停产](https://so.toutiao.com/search?keyword=工人躺袋装果酱上+官方：责令停产)
+1. [加沙一医院重症监护室遭以军枪击](https://so.toutiao.com/search?keyword=加沙一医院重症监护室遭以军枪击)
+1. [杨惠妍出席碧桂园内部会议](https://so.toutiao.com/search?keyword=杨惠妍出席碧桂园内部会议)
+1. [李想：增程技术是未来](https://so.toutiao.com/search?keyword=李想：增程技术是未来)
+1. [媒体：KTV衰退的趋势肉眼可见](https://so.toutiao.com/search?keyword=媒体：KTV衰退的趋势肉眼可见)
+1. [广东省卫健委主任朱宏主动投案](https://so.toutiao.com/search?keyword=广东省卫健委主任朱宏主动投案)
+1. [女孩期中考完试直接卖书](https://so.toutiao.com/search?keyword=女孩期中考完试直接卖书)
+1. [苏州毒地案双方回应为何大相径庭](https://so.toutiao.com/search?keyword=苏州毒地案双方回应为何大相径庭)
+1. [中信银行原行长孙德顺贪9.79亿获死缓](https://so.toutiao.com/search?keyword=中信银行原行长孙德顺贪9.79亿获死缓)
+1. [儿媳遭公公殴打 知情人：矛盾已解决](https://so.toutiao.com/search?keyword=儿媳遭公公殴打+知情人：矛盾已解决)
+1. [西安初雪打雷闪电](https://so.toutiao.com/search?keyword=西安初雪打雷闪电)
+1. [直击北方多地迎来第一场雪](https://so.toutiao.com/search?keyword=直击北方多地迎来第一场雪)
 1. [为何顾家家居40年的家业说卖就卖](https://so.toutiao.com/search?keyword=为何顾家家居40年的家业说卖就卖)
 1. [缅北战火旁中国边境小镇瑞丽的平静](https://so.toutiao.com/search?keyword=缅北战火旁中国边境小镇瑞丽的平静)
-1. [哈马斯和以色列的战斗处于什么状态](https://so.toutiao.com/search?keyword=哈马斯和以色列的战斗处于什么状态)
-1. [阿巴斯：已准备好承担在加沙的责任](https://so.toutiao.com/search?keyword=阿巴斯：已准备好承担在加沙的责任)
-1. [体育馆坍塌事故11人被采取强制措施](https://so.toutiao.com/search?keyword=体育馆坍塌事故11人被采取强制措施)
-1. [巴方质问：杀多少巴勒斯坦人才停战](https://so.toutiao.com/search?keyword=巴方质问：杀多少巴勒斯坦人才停战)
-1. [曝加沙一难民营5万人共用4个卫生间](https://so.toutiao.com/search?keyword=曝加沙一难民营5万人共用4个卫生间)
-1. [佛山一医院疑贩卖出生证 产科已停诊](https://so.toutiao.com/search?keyword=佛山一医院疑贩卖出生证+产科已停诊)
 1. [本轮冲突已致以色列约1200人死亡](https://so.toutiao.com/search?keyword=本轮冲突已致以色列约1200人死亡)
-1. [狗子偷吃半盘生水饺 小弟帮忙盯梢](https://so.toutiao.com/search?keyword=狗子偷吃半盘生水饺+小弟帮忙盯梢)
-1. [歼-20实弹射击近照首次曝光](https://so.toutiao.com/search?keyword=歼-20实弹射击近照首次曝光)
-1. [哈马斯领导人抵达埃及](https://so.toutiao.com/search?keyword=哈马斯领导人抵达埃及)
-1. [博主解读江苏淮安205国道收费](https://so.toutiao.com/search?keyword=博主解读江苏淮安205国道收费)
-1. [刘銮雄：恒大投资都是自己决定的](https://so.toutiao.com/search?keyword=刘銮雄：恒大投资都是自己决定的)
-1. [英伟达为中国市场定制三款AI芯片](https://so.toutiao.com/search?keyword=英伟达为中国市场定制三款AI芯片)
 1. [韩国男子被机器人误当蔬菜压死](https://so.toutiao.com/search?keyword=韩国男子被机器人误当蔬菜压死)
-1. [工人躺袋装果酱上 官方：责令停产](https://so.toutiao.com/search?keyword=工人躺袋装果酱上+官方：责令停产)
-1. [大V：没必要把孟羽童跳槽关联品德](https://so.toutiao.com/search?keyword=大V：没必要把孟羽童跳槽关联品德)
 1. [消防回应女生为约会爬窗户踩空坠楼](https://so.toutiao.com/search?keyword=消防回应女生为约会爬窗户踩空坠楼)
-1. [国务院督查组已进驻四省份](https://so.toutiao.com/search?keyword=国务院督查组已进驻四省份)
-1. [黔东南芦笙会小朋友被饰品压弯了腰](https://so.toutiao.com/search?keyword=黔东南芦笙会小朋友被饰品压弯了腰)
-1. [钟南山：近期或有新冠感染小高峰](https://so.toutiao.com/search?keyword=钟南山：近期或有新冠感染小高峰)
 1. [何超琼现身酒吧清唱《偏偏喜欢你》](https://so.toutiao.com/search?keyword=何超琼现身酒吧清唱《偏偏喜欢你》)
-1. [女孩期中考完试直接卖书](https://so.toutiao.com/search?keyword=女孩期中考完试直接卖书)
-1. [夫妇高速吵架 妻子多次冲向行车道](https://so.toutiao.com/search?keyword=夫妇高速吵架+妻子多次冲向行车道)
 1. [小女孩凌晨走丢获包子铺夫妇救助](https://so.toutiao.com/search?keyword=小女孩凌晨走丢获包子铺夫妇救助)
 1. [加沙地带已有21家医院关闭](https://so.toutiao.com/search?keyword=加沙地带已有21家医院关闭)
 1. [媒体：应拆除韦世豪这枚炸弹的引信](https://so.toutiao.com/search?keyword=媒体：应拆除韦世豪这枚炸弹的引信)
-1. [警方怀疑权志龙全身脱毛用意](https://so.toutiao.com/search?keyword=警方怀疑权志龙全身脱毛用意)
 1. [中国女子在日本遇害案监控曝光](https://so.toutiao.com/search?keyword=中国女子在日本遇害案监控曝光)
 1. [老人喝多辱骂外卖小哥被怼](https://so.toutiao.com/search?keyword=老人喝多辱骂外卖小哥被怼)
 1. [“双11”反套路指南请收好](https://so.toutiao.com/search?keyword=“双11”反套路指南请收好)
 1. [以色列总理：目标是战胜哈马斯](https://so.toutiao.com/search?keyword=以色列总理：目标是战胜哈马斯)
 1. [印度和巴基斯坦再次交火](https://so.toutiao.com/search?keyword=印度和巴基斯坦再次交火)
 1. [全球资管巨头先锋领航确认退出中国](https://so.toutiao.com/search?keyword=全球资管巨头先锋领航确认退出中国)
-1. [两车刮蹭致大堵车 “公路判官”出手](https://so.toutiao.com/search?keyword=两车刮蹭致大堵车+“公路判官”出手)
 1. [孩子考完试把书卖了 爸妈赶紧找回](https://so.toutiao.com/search?keyword=孩子考完试把书卖了+爸妈赶紧找回)
 1. [90后老板招女主播要求体重140斤以上](https://so.toutiao.com/search?keyword=90后老板招女主播要求体重140斤以上)
 1. [南昌一女子聚餐后死亡 同桌3人被判](https://so.toutiao.com/search?keyword=南昌一女子聚餐后死亡+同桌3人被判)
@@ -66,7 +82,6 @@
 1. [高校女生占座还打砸驱赶同学](https://so.toutiao.com/search?keyword=高校女生占座还打砸驱赶同学)
 1. [哈马斯称一被俘以士兵死于以军空袭](https://so.toutiao.com/search?keyword=哈马斯称一被俘以士兵死于以军空袭)
 1. [粮食局长收巨额现金退休后锒铛入狱](https://so.toutiao.com/search?keyword=粮食局长收巨额现金退休后锒铛入狱)
-1. [毒地土壤中的有毒物质有何危害](https://so.toutiao.com/search?keyword=毒地土壤中的有毒物质有何危害)
 1. [加沙医院里的早产儿面临生死考验](https://so.toutiao.com/search?keyword=加沙医院里的早产儿面临生死考验)
 1. [广东两家中华老字号被商务部除名](https://so.toutiao.com/search?keyword=广东两家中华老字号被商务部除名)
 1. [好友痛哭吊唁佳木斯体育馆遇难者](https://so.toutiao.com/search?keyword=好友痛哭吊唁佳木斯体育馆遇难者)
@@ -100,9 +115,7 @@
 1. [林志颖获《披荆斩棘》总成绩冠军](https://so.toutiao.com/search?keyword=林志颖获《披荆斩棘》总成绩冠军)
 1. [为什么越来越多的KTV关店了](https://so.toutiao.com/search?keyword=为什么越来越多的KTV关店了)
 1. [博主曝光大连鬼秤 监管部门回应](https://so.toutiao.com/search?keyword=博主曝光大连鬼秤+监管部门回应)
-1. [南京胖哥回应父亲患癌：不需要捐款](https://so.toutiao.com/search?keyword=南京胖哥回应父亲患癌：不需要捐款)
 1. [余承东再回应：AEB只是个小Case](https://so.toutiao.com/search?keyword=余承东再回应：AEB只是个小Case)
-1. [李想：增程技术是未来](https://so.toutiao.com/search?keyword=李想：增程技术是未来)
 1. [华为缺货背后炒家如何天价“割韭”](https://so.toutiao.com/search?keyword=华为缺货背后炒家如何天价“割韭”)
 1. [美媒删除讽刺哈马斯漫画并道歉](https://so.toutiao.com/search?keyword=美媒删除讽刺哈马斯漫画并道歉)
 1. [成都蓉城董事长李鸣琴被查](https://so.toutiao.com/search?keyword=成都蓉城董事长李鸣琴被查)
@@ -111,7 +124,6 @@
 1. [华为自研22000转速电机创业界新高](https://so.toutiao.com/search?keyword=华为自研22000转速电机创业界新高)
 1. [证监会：大力加强监管科技建设](https://so.toutiao.com/search?keyword=证监会：大力加强监管科技建设)
 1. [中国科技如何突围中美“竞合”态势](https://so.toutiao.com/search?keyword=中国科技如何突围中美“竞合”态势)
-1. [杨惠妍出席碧桂园内部会议](https://so.toutiao.com/search?keyword=杨惠妍出席碧桂园内部会议)
 1. [法院：宝能集团没有可供处分的财产](https://so.toutiao.com/search?keyword=法院：宝能集团没有可供处分的财产)
 1. [四川一落马干部痛哭：一辈子都毁了](https://so.toutiao.com/search?keyword=四川一落马干部痛哭：一辈子都毁了)
 1. [妇联回应哺乳期宝妈遭公公殴打](https://so.toutiao.com/search?keyword=妇联回应哺乳期宝妈遭公公殴打)
