--- a/archives/zhihu-search/2023-11-12.md
+++ b/archives/zhihu-search/2023-11-12.md
@@ -1,9 +1,10 @@
 # 2023-11-12
 
-共 32 条
+共 33 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Sun Nov 12 2023 20:07:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Nov 12 2023 21:02:51 GMT+0800 (China Standard Time) -->
+1. [T1 晋级总决赛](https://www.zhihu.com/search?q=T1 晋级总决赛)
 1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
 1. [蓝牙耳机](https://www.zhihu.com/search?q=蓝牙耳机)
 1. [降噪耳机](https://www.zhihu.com/search?q=降噪耳机)
