--- a/archives/toutiao-search/2023-11-13.md
+++ b/archives/toutiao-search/2023-11-13.md
@@ -1,57 +1,77 @@
 # 2023-11-13
 
-共 367 条
+共 383 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 13 2023 22:00:41 GMT+0800 (China Standard Time) -->
-1. [中国会否同意购买美国波音737MAX](https://so.toutiao.com/search?keyword=中国会否同意购买美国波音737MAX)
+<!-- 最后更新时间 Mon Nov 13 2023 23:00:44 GMT+0800 (China Standard Time) -->
 1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
-1. [“家门口”就医 要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医+要“有”还要“优”)
 1. [多国爆发臭虫危机民众不敢去电影院](https://so.toutiao.com/search?keyword=多国爆发臭虫危机民众不敢去电影院)
-1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
-1. [国家气候中心：厄尔尼诺事件已形成](https://so.toutiao.com/search?keyword=国家气候中心：厄尔尼诺事件已形成)
-1. [中美元首将沟通两国战略性方向性问题](https://so.toutiao.com/search?keyword=中美元首将沟通两国战略性方向性问题)
-1. [英国前首相卡梅伦出任英外交大臣](https://so.toutiao.com/search?keyword=英国前首相卡梅伦出任英外交大臣)
+1. [“家门口”就医 要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医+要“有”还要“优”)
+1. [官方通报镇长在会议现场摔瓶子](https://so.toutiao.com/search?keyword=官方通报镇长在会议现场摔瓶子)
+1. [媒体评学生实习领导提成600万](https://so.toutiao.com/search?keyword=媒体评学生实习领导提成600万)
 1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
-1. [美媒：中美元首会晤是全球稳定的胜利](https://so.toutiao.com/search?keyword=美媒：中美元首会晤是全球稳定的胜利)
+1. [余承东曾称“倒车想撞都难”](https://so.toutiao.com/search?keyword=余承东曾称“倒车想撞都难”)
+1. [英国前首相卡梅伦出任英外交大臣](https://so.toutiao.com/search?keyword=英国前首相卡梅伦出任英外交大臣)
+1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
+1. [国家气候中心：厄尔尼诺事件已形成](https://so.toutiao.com/search?keyword=国家气候中心：厄尔尼诺事件已形成)
 1. [多地可低价代缴采暖费？假的](https://so.toutiao.com/search?keyword=多地可低价代缴采暖费？假的)
-1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
+1. [缅北四大家族魏超仁之子录忏悔视频](https://so.toutiao.com/search?keyword=缅北四大家族魏超仁之子录忏悔视频)
 1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
+1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
+1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
+1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
 1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
 1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
-1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
-1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
-1. [孙业礼已任文旅部党组书记](https://so.toutiao.com/search?keyword=孙业礼已任文旅部党组书记)
-1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
-1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
+1. [女子凌晨三点发现家中惊现陌生男子](https://so.toutiao.com/search?keyword=女子凌晨三点发现家中惊现陌生男子)
+1. [华为概念股今日表现强势](https://so.toutiao.com/search?keyword=华为概念股今日表现强势)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
 1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
-1. [巴以冲突会演变成中东战争吗](https://so.toutiao.com/search?keyword=巴以冲突会演变成中东战争吗)
+1. [传苹果公司将叫停摇一摇跳转广告](https://so.toutiao.com/search?keyword=传苹果公司将叫停摇一摇跳转广告)
 1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
+1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
 1. [埃尔多安：内塔尼亚胡该离开了](https://so.toutiao.com/search?keyword=埃尔多安：内塔尼亚胡该离开了)
-1. [伊斯兰国家峰会未就惩罚以达成一致](https://so.toutiao.com/search?keyword=伊斯兰国家峰会未就惩罚以达成一致)
-1. [官方通报镇长在会议现场摔瓶子](https://so.toutiao.com/search?keyword=官方通报镇长在会议现场摔瓶子)
-1. [中方：加方应树立客观理性的中国观](https://so.toutiao.com/search?keyword=中方：加方应树立客观理性的中国观)
-1. [贵州深山有一座童话城堡](https://so.toutiao.com/search?keyword=贵州深山有一座童话城堡)
+1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
+1. [《无所畏惧》女孩被网暴找律师求助](https://so.toutiao.com/search?keyword=《无所畏惧》女孩被网暴找律师求助)
+1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
+1. [伊朗边防部队与恐怖分子发生冲突](https://so.toutiao.com/search?keyword=伊朗边防部队与恐怖分子发生冲突)
+1. [张靓颖演唱会唱《如果这就是爱情》](https://so.toutiao.com/search?keyword=张靓颖演唱会唱《如果这就是爱情》)
+1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
+1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
 1. [92岁妈妈把女儿家打造成从前模样](https://so.toutiao.com/search?keyword=92岁妈妈把女儿家打造成从前模样)
+1. [姜雪宁是谢危的理智开关](https://so.toutiao.com/search?keyword=姜雪宁是谢危的理智开关)
+1. [先锋领航退出中国：仍看好中国市场](https://so.toutiao.com/search?keyword=先锋领航退出中国：仍看好中国市场)
+1. [中国会否同意购买美国波音737MAX](https://so.toutiao.com/search?keyword=中国会否同意购买美国波音737MAX)
+1. [巴以冲突会演变成中东战争吗](https://so.toutiao.com/search?keyword=巴以冲突会演变成中东战争吗)
+1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
+1. [中方：中国领土我们一寸也不会放弃](https://so.toutiao.com/search?keyword=中方：中国领土我们一寸也不会放弃)
+1. [纽约一住宅楼发生火灾 已致3人死亡](https://so.toutiao.com/search?keyword=纽约一住宅楼发生火灾+已致3人死亡)
+1. [LOL电竞官方发对比图](https://so.toutiao.com/search?keyword=LOL电竞官方发对比图)
+1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
+1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
+1. [已有49名记者在加沙地带遇难](https://so.toutiao.com/search?keyword=已有49名记者在加沙地带遇难)
+1. [贵州深山有一座童话城堡](https://so.toutiao.com/search?keyword=贵州深山有一座童话城堡)
+1. [比亚迪“海狮07”将于广州车展首发](https://so.toutiao.com/search?keyword=比亚迪“海狮07”将于广州车展首发)
+1. [店主回应加错菜后服务员逐个挑出](https://so.toutiao.com/search?keyword=店主回应加错菜后服务员逐个挑出)
+1. [中美元首会晤为何选在APEC期间](https://so.toutiao.com/search?keyword=中美元首会晤为何选在APEC期间)
+1. [广东打响撤区复镇第一枪](https://so.toutiao.com/search?keyword=广东打响撤区复镇第一枪)
+1. [中美元首将沟通两国战略性方向性问题](https://so.toutiao.com/search?keyword=中美元首将沟通两国战略性方向性问题)
+1. [美媒：中美元首会晤是全球稳定的胜利](https://so.toutiao.com/search?keyword=美媒：中美元首会晤是全球稳定的胜利)
+1. [孙业礼已任文旅部党组书记](https://so.toutiao.com/search?keyword=孙业礼已任文旅部党组书记)
+1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
+1. [伊斯兰国家峰会未就惩罚以达成一致](https://so.toutiao.com/search?keyword=伊斯兰国家峰会未就惩罚以达成一致)
+1. [中方：加方应树立客观理性的中国观](https://so.toutiao.com/search?keyword=中方：加方应树立客观理性的中国观)
 1. [周鸿祎称无论任何情况我都支持华为](https://so.toutiao.com/search?keyword=周鸿祎称无论任何情况我都支持华为)
 1. [船记：这是我见过得分最艰难的快船](https://so.toutiao.com/search?keyword=船记：这是我见过得分最艰难的快船)
-1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
 1. [宁夏百辰产业投资公司副总经理被查](https://so.toutiao.com/search?keyword=宁夏百辰产业投资公司副总经理被查)
-1. [中美元首会晤为何选在APEC期间](https://so.toutiao.com/search?keyword=中美元首会晤为何选在APEC期间)
-1. [《无所畏惧》女孩被网暴找律师求助](https://so.toutiao.com/search?keyword=《无所畏惧》女孩被网暴找律师求助)
 1. [广东多地发布寒冷黄色预警](https://so.toutiao.com/search?keyword=广东多地发布寒冷黄色预警)
 1. [韩国主帅：踢中国男足会是一场苦战](https://so.toutiao.com/search?keyword=韩国主帅：踢中国男足会是一场苦战)
 1. [华为11月28日将发大波新品](https://so.toutiao.com/search?keyword=华为11月28日将发大波新品)
-1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
 1. [10月份社会融资规模增量为1.85万亿](https://so.toutiao.com/search?keyword=10月份社会融资规模增量为1.85万亿)
 1. [丰田全新一代凯美瑞即将海外发布](https://so.toutiao.com/search?keyword=丰田全新一代凯美瑞即将海外发布)
 1. [vivo发布自研影像芯片V3](https://so.toutiao.com/search?keyword=vivo发布自研影像芯片V3)
 1. [黄日华友谊赛中踹贵州球员](https://so.toutiao.com/search?keyword=黄日华友谊赛中踹贵州球员)
 1. [女乘客购票默认上铺？12306回应](https://so.toutiao.com/search?keyword=女乘客购票默认上铺？12306回应)
-1. [纽约一住宅楼发生火灾 已致3人死亡](https://so.toutiao.com/search?keyword=纽约一住宅楼发生火灾+已致3人死亡)
 1. [全国多地寒假时间确定](https://so.toutiao.com/search?keyword=全国多地寒假时间确定)
-1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
 1. [国足世预赛16日对阵泰国](https://so.toutiao.com/search?keyword=国足世预赛16日对阵泰国)
 1. [中国工程院院士秦裕琨逝世](https://so.toutiao.com/search?keyword=中国工程院院士秦裕琨逝世)
 1. [流感高发季防治指南请收好](https://so.toutiao.com/search?keyword=流感高发季防治指南请收好)
@@ -69,7 +89,6 @@
 1. [空军飞行员回忆与外机空中缠斗](https://so.toutiao.com/search?keyword=空军飞行员回忆与外机空中缠斗)
 1. [“百亿毒地案”涉及哪些法律问题](https://so.toutiao.com/search?keyword=“百亿毒地案”涉及哪些法律问题)
 1. [世卫已设法与加沙希法医院取得联系](https://so.toutiao.com/search?keyword=世卫已设法与加沙希法医院取得联系)
-1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
 1. [朝鲜要求解散“联合国军司令部”](https://so.toutiao.com/search?keyword=朝鲜要求解散“联合国军司令部”)
 1. [第17号台风或将生成](https://so.toutiao.com/search?keyword=第17号台风或将生成)
 1. [缅北电诈头目孙子北大通知书疑P图](https://so.toutiao.com/search?keyword=缅北电诈头目孙子北大通知书疑P图)
@@ -120,7 +139,6 @@
 1. [出租车未打表男子到目的地拒付车费](https://so.toutiao.com/search?keyword=出租车未打表男子到目的地拒付车费)
 1. [小男孩拼尽全力扶瘫痪妈妈上轮椅](https://so.toutiao.com/search?keyword=小男孩拼尽全力扶瘫痪妈妈上轮椅)
 1. [Bin公开喊话：相信theshy](https://so.toutiao.com/search?keyword=Bin公开喊话：相信theshy)
-1. [广东打响撤区复镇第一枪](https://so.toutiao.com/search?keyword=广东打响撤区复镇第一枪)
 1. [上官正义再次追问商丘妇幼保健院](https://so.toutiao.com/search?keyword=上官正义再次追问商丘妇幼保健院)
 1. [加沙希法医院病患死亡人数不断攀升](https://so.toutiao.com/search?keyword=加沙希法医院病患死亡人数不断攀升)
 1. [黄日华友谊赛中踹贵州球员引争议](https://so.toutiao.com/search?keyword=黄日华友谊赛中踹贵州球员引争议)
@@ -152,7 +170,6 @@
 1. [外交部：支持旨在恢复巴以和平举措](https://so.toutiao.com/search?keyword=外交部：支持旨在恢复巴以和平举措)
 1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
 1. [中国气象局：北方农业需防降温影响](https://so.toutiao.com/search?keyword=中国气象局：北方农业需防降温影响)
-1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
 1. [沃格尔：比尔是个战士](https://so.toutiao.com/search?keyword=沃格尔：比尔是个战士)
 1. [智能手机或将于2050年退场](https://so.toutiao.com/search?keyword=智能手机或将于2050年退场)
 1. [范弗里特：申京已经做得足够好了](https://so.toutiao.com/search?keyword=范弗里特：申京已经做得足够好了)
@@ -218,7 +235,6 @@
 1. [幼童被海浪卷走男子飞奔捞起](https://so.toutiao.com/search?keyword=幼童被海浪卷走男子飞奔捞起)
 1. [重庆市原副市长熊雪被开除党籍](https://so.toutiao.com/search?keyword=重庆市原副市长熊雪被开除党籍)
 1. [广东女子疑因营业证件办不下来跳河](https://so.toutiao.com/search?keyword=广东女子疑因营业证件办不下来跳河)
-1. [缅北四大家族魏超仁之子录忏悔视频](https://so.toutiao.com/search?keyword=缅北四大家族魏超仁之子录忏悔视频)
 1. [厂二代坠楼身亡：接任后公司营收翻番](https://so.toutiao.com/search?keyword=厂二代坠楼身亡：接任后公司营收翻番)
 1. [海军舰艇南海训练上演“隐身术”](https://so.toutiao.com/search?keyword=海军舰艇南海训练上演“隐身术”)
 1. [加共体呼吁在加沙地带立即停火](https://so.toutiao.com/search?keyword=加共体呼吁在加沙地带立即停火)
